src/tests/snapshots/cargo_vet__tests__vet__mock-simple-reverse-delta-to-unaudited.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (2 fully audited, 1 partially audited)

