src/tests/snapshots/cargo_vet__tests__vet__mock-simple-reviewed-too-weakly.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

