src/tests/snapshots/cargo_vet__tests__vet__mock-simple-wrongly-reversed-delta-to-full-audit.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": "5.0.0",
          "to": "10.0.0",
          "diffstat": {
            "insertions": 75,
            "deletions": 0,
            "files_changed": 1
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": "5.0.0",
            "to": "10.0.0",
            "diffstat": {
              "insertions": 75,
              "deletions": 0,
              "files_changed": 1
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 75
  }
}
