src/tests/snapshots/cargo_vet__tests__vet__mock_simple_foreign_audited_pun_no_mapping.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]
  third-party2:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet inspect third-party1 10.0.0  (used by first-party)  (100 lines)
    cargo vet inspect third-party2 10.0.0  (used by first-party)  (100 lines)

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

