src/tests/snapshots/cargo_vet__tests__vet__simple-policy-first-dep-extra-missing.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "fuzzed"
      ],
      "name": "third-party2",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "fuzzed": [
        {
          "name": "third-party2",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "fuzzed"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "third-party2",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "fuzzed"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 100
  }
}
